Fixed intermittent `touchscroll` not-scrollable related to add-to-home and orientation change. Fixed by using `overflow-y: scroll` (instead of `auto`) explicitly for ios and removed minHeight hacks. Added `autoscroll` options for regular browser.

--- a/themes/scss/include/_base.scss
+++ b/themes/scss/include/_base.scss
@@ -54,7 +54,7 @@ body {
         display: none;
     }
 
-    &.touchscroll:not(.animating3d) {
+    &.touchscroll:not(.animating3d), &.autoscroll:not(.animating3d) {
         overflow-y: auto;
         -webkit-overflow-scrolling: touch;
 
@@ -68,6 +68,13 @@ body {
             -webkit-overflow-scrolling: touch;
         }
     }
+
+    &.touchscroll:not(.animating3d) {
+        .scroll {
+            overflow-y: scroll;
+        }
+    }
+
     // Ensure margins don't collapse
     .scroll {
         -webkit-margin-collapse: separate;
